# NewsBot

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLOSED_SOURCE_CONVERSION_SUMMARY.md  COMMAND_STREAMLINING_SUMMARY.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRODUCTION_READINESS_CHECKLIST.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_STRUCTURE.md  PROPRIETARY_NOTICE.md  README.md  REMOTE_VPS_MANAGEMENT_GUIDE.md  SECURITY.md  VPS_24_7_DEPLOYMENT_GUIDE.md  VPS_DISCORD_MANAGEMENT.md  botdata.json  deploy_to_vps.sh  deploy_vps.sh  docker-compose.yml  env.example  last_uptime.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-production.txt  requirements.txt  run.py  test_enhancements.py  test_requirements.txt
.github/: pull_request_template.md
backups/: backup_history.json
config/: bot.yaml  config.yaml  config_profiles.yaml  unified_config.yaml  vps_production.yaml
data/: botdata.json  health_report.json  last_uptime.txt
docs/: ADVANCED_AI_CONTENT_ANALYSIS.md  API_REFERENCE.md  background_tasks.md  command_modules.md  configuration.md  core_modules.md  docstring_guide.md  index.md  integration_guide.md  monitoring.md  telegram_client_extensions.md
scripts/: README.md  backup_manager.py  check_dependencies.py  demo_logging.py  log_report.py  monitoring_dashboard.py  pre_deployment_check.sh  proprietary_check.py  run_tests.sh  simple_health_check.py  test_telegram.py  view_logs.py
src/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_advanced_ai_content_analysis.py  test_ai_integration.py  test_background_tasks.py  test_bot_core.py  test_cogs_fetch.py  test_cogs_system.py  test_complete_end_to_end.py  test_comprehensive_end_to_end.py  test_comprehensive_fixing.py  test_config_manager.py  test_config_validator.py  test_fetch_cog.py  (+19 more)
(+122 files in other folders)
